--- a/_global.scss
+++ b/_global.scss
@@ -1,4 +1,5 @@
-* {
+*,
+span {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -19,6 +20,7 @@ body {
   line-height: 1;
   background-color: white;
   color: $gray-dark;
+  margin-bottom: 100px;
 }
 ul,
 li {
@@ -42,11 +44,30 @@ li {
   border-radius: 6px;
   margin-top: 30px;
   background-color: transparent;
-  border: 2px solid;
+  border: 2px solid white;
   margin-right: 10px;
+  outline: none;
 }
 .button:hover {
   background-color: #23b7a4;
-  border: none;
-  outline: none;
+  border: 2px solid transparent;
+}
+.heading {
+  h2 {
+    padding-top: 80px;
+    padding-bottom: 60px;
+    padding-left: 30px;
+    font-size: 36px;
+    font-weight: 500;
+    text-transform: uppercase;
+  }
+}
+.heading:before {
+  content: "";
+  height: 35px;
+  width: 10px;
+  background-color: #e1e6ea;
+  position: absolute;
+  top: 78px;
+  left: 0;
 }
