--- a/_modest.scss
+++ b/_modest.scss
@@ -1,19 +1,70 @@
 .modest {
-  &-heading {
-    padding-top: 80px;
-    padding-bottom: 60px;
-    font-weight: lighter;
-    font-size: 35px;
-    text-transform: uppercase;
-  }
-  &-heading:before {
-    content: "";
-    height: 35px;
-    width: 10px;
-    padding-right: 15px;
-  }
+  position: relative;
+  border-bottom: 1px solid $text-color;
   &-content {
     display: flex;
     justify-content: space-between;
+  }
+  &-info {
+    padding-bottom: 100px;
+    max-width: 650px;
+  }
+  &-desc {
+    p {
+      line-height: 25px;
+      color: #b8b9bb;
+      padding-bottom: 35px;
+    }
+  }
+  &-social {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding-top: 35px;
+    &-item {
+      padding: 20px;
+      background-color: #c8cdd0;
+      margin-right: 1px;
+      color: white;
+      width: 60px;
+      height: 60px;
+      i {
+        text-align: center;
+      }
+    }
+  }
+  &-list {
+    margin-left: 35px;
+    max-width: 450px;
+  }
+  &-item {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    span {
+      display: block;
+      width: 89px;
+      height: 50px;
+      background-color: #23b7a4;
+      color: white;
+      margin-right: 20px;
+      text-align: center;
+      line-height: 50px;
+    }
+    &-title {
+      font-weight: 200;
+      font-size: 20px;
+      margin-bottom: 20px;
+      h4 {
+        font-size: 20px;
+        font-weight: 400;
+        margin-bottom: 20px;
+      }
+      p {
+        font-size: 14px;
+        line-height: 17px;
+        margin-bottom: 40px;
+      }
+    }
   }
 }
