add work and doing

--- a/_team.scss
+++ b/_team.scss
@@ -1,6 +1,7 @@
 .team {
   position: relative;
   max-width: 1140px;
+  margin-bottom: 100px;
   &-list {
     display: flex;
     align-items: center;
