--- a/style.css
+++ b/style.css
@@ -213,6 +213,7 @@ li {
 .team {
   position: relative;
   max-width: 1140px;
+  margin-bottom: 100px;
 }
 .team-list {
   display: flex;
@@ -236,6 +237,59 @@ li {
 }
 .team-item-desc {
   font-size: 16px;
+  color: #a4aead;
+}
+
+.work {
+  position: relative;
+  background-color: #3a454d;
+}
+.work-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.work-item {
+  width: calc(33.33% - 20px);
+  padding-bottom: 30px;
+}
+.work-button {
+  margin: 0 auto;
+  margin-top: 30px;
+  margin-bottom: 60px;
+}
+
+.doing {
+  position: relative;
+  padding-bottom: 160px;
+}
+.doing-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.doing-item {
+  width: calc(25% - 25px);
+}
+.doing-item-image {
+  padding-top: 90px;
+  text-align: center;
+  font-size: 42px;
+  padding-bottom: 35px;
+  color: #23b7a4;
+}
+.doing-item-info .title {
+  font-size: 20px;
+  font-weight: 400;
+  text-transform: uppercase;
+  padding-bottom: 30px;
+  text-align: center;
+}
+.doing-item-info .desc {
+  line-height: 25px;
+  text-align: center;
   color: #a4aead;
 }
 
