--- a/_global.scss
+++ b/_global.scss
@@ -1,3 +1,7 @@
+html {
+  font-size: 62.5%;
+}
+
 *,
 span {
   margin: 0;
@@ -16,11 +20,9 @@ a {
 }
 body {
   font-family: "Poppins", sans-serif;
-  font-size: 16px;
   line-height: 1;
   background-color: white;
   color: $gray-dark;
-  margin-bottom: 100px;
 }
 ul,
 li {
